# ics-thermal-solver

./: README.md  key.txt  key.txt.pub  pyproject.toml
examples/: plot_results.py  run_tests.py
src/ics_thermal/: __init__.py  active_set.py  config.py  graph.py  ics_driver.py  jacobian.py  newton.py  pcs_driver.py  physics.py  residual.py
src/ics_thermal_solver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_active_set.py  test_config.py  test_ics_pcs_consistency.py
